--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,5 @@
     "php": "^7.0.0",
     "yiisoft/yii2": "~2.0.8"
   },
-  "type": "yii2-extension",
-  "minimum-stability": "stable"
+  "type": "yii2-extension"
 }
